--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "eleventy --serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,9 +16,11 @@
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
     "@tailwindcss/postcss": "^4.0.3",
     "autoprefixer": "^10.4.20",
+    "markdown-it": "^14.1.0",
     "postcss": "^8.5.1",
     "puppeteer": "^24.1.1",
-    "tailwindcss": "^4.0.3"
+    "tailwindcss": "^4.0.3",
+    "markdown-it-named-headings": "^1.1.0"
   },
   "dependencies": {
     "@picocss/pico": "^2.0.6"
