--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "type": "module",
   "scripts": {
     "start": "eleventy --serve",
+    "lint": "npx markdownlint pages",
+    "lint:format": "npx markdownlint --fix pages",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,10 +19,11 @@
     "@tailwindcss/postcss": "^4.0.3",
     "autoprefixer": "^10.4.20",
     "markdown-it": "^14.1.0",
+    "markdown-it-named-headings": "^1.1.0",
+    "markdownlint": "^0.37.4",
     "postcss": "^8.5.1",
     "puppeteer": "^24.1.1",
-    "tailwindcss": "^4.0.3",
-    "markdown-it-named-headings": "^1.1.0"
+    "tailwindcss": "^4.0.3"
   },
   "dependencies": {
     "@picocss/pico": "^2.0.6"
