--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "eleventy --serve",
     "lint": "npx markdownlint pages",
-    "lint:format": "npx markdownlint --fix pages",
+    "format": "npx markdownlint --fix pages",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
