--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "eleventy --serve",
-    "build": "eleventy",
+    "start": "npx @11ty/eleventy --serve",
+    "build": "npx @11ty/eleventy",
     "lint": "markdownlint pages",
     "format": "markdownlint --fix pages",
     "test": "npm run lint"
