install markdownlint-cli

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "markdown-it": "^14.1.0",
     "markdown-it-named-headings": "^1.1.0",
     "markdownlint": "^0.37.4",
+    "markdownlint-cli": "^0.44.0",
     "postcss": "^8.5.1",
     "puppeteer": "^24.1.1",
     "tailwindcss": "^4.0.3"
