set auto discover urls number

--- a/.lighthouserc.json
+++ b/.lighthouserc.json
@@ -2,6 +2,7 @@
   "extends": "lighthouse:default",
   "ci": {
     "collect": {
+      "maxAutodiscoverUrls": 10,
       "staticDistDir": "./dist/"
     },
     "upload": {
