lint all JS examples in markdown

--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "scripts": {
     "start": "npx @11ty/eleventy --serve",
     "build": "npx @11ty/eleventy",
-    "lint": "markdownlint pages",
-    "format": "markdownlint --fix pages",
+    "lint": "npm run eslint && npm run markdownlint",
+    "format": "npm run eslint:fix && npm run markdownlint:fix",
+    "markdownlint": "markdownlint pages",
+    "markdownlint:fix": "markdownlint --fix pages",
+    "eslint": "eslint pages",
+    "eslint:fix": "eslint --fix pages",
     "test": "npm run lint"
   },
   "keywords": [],
@@ -17,8 +21,10 @@
     "@11ty/eleventy": "^3.0.0",
     "@11ty/eleventy-fetch": "^5.0.2",
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
+    "@eslint/markdown": "^6.2.2",
     "@tailwindcss/postcss": "^4.0.6",
     "autoprefixer": "^10.4.20",
+    "eslint": "^9.20.1",
     "markdown-it": "^14.1.0",
     "markdown-it-anchor": "^9.2.0",
     "markdownlint": "^0.37.4",
