--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "start": "npx @11ty/eleventy --serve",
     "build": "npx @11ty/eleventy",
     "lint": "npm run eslint && npm run markdownlint",
-    "format": "npm run eslint:fix && npm run markdownlint:fix",
+    "format": "npm run eslint:fix && npm run markdownlint:fix && npm run prettier",
     "markdownlint": "markdownlint pages",
     "markdownlint:fix": "markdownlint --fix pages",
     "eslint": "eslint pages",
     "eslint:fix": "eslint --fix pages",
+    "prettier": "prettier --write pages",
     "test": "npm run lint"
   },
   "keywords": [],
@@ -25,11 +26,13 @@
     "@tailwindcss/postcss": "^4.0.6",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.20.1",
+    "globals": "^15.15.0",
     "markdown-it": "^14.1.0",
     "markdown-it-anchor": "^9.2.0",
     "markdownlint": "^0.37.4",
     "markdownlint-cli": "^0.44.0",
     "postcss": "^8.5.2",
+    "prettier": "3.5.1",
     "puppeteer": "^24.2.1",
     "tailwindcss": "^4.0.6"
   },
