--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "@11ty/eleventy-fetch": "^5.0.2",
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
     "@eslint/markdown": "^6.2.2",
+    "@sindresorhus/slugify": "^2.2.1",
     "@tailwindcss/postcss": "^4.0.6",
     "autoprefixer": "^10.4.20",
+    "eleventy-plugin-toc": "^1.1.5",
     "eslint": "^9.20.1",
     "globals": "^15.15.0",
+    "jsdom": "^26.0.0",
     "markdown-it": "^14.1.0",
     "markdown-it-anchor": "^9.2.0",
     "markdownlint": "^0.37.4",
